# CoNet

./: .gitignore  A16S_subgraph.dot  CFX.dot  CFX_parent_temporal.dot  CMakeLists.txt  Makefile  README.md  conet.dot  conet_parent_temporal.dot  donor.dot  donor_parent_temporal.dot  graph.dot  graph_output.dot  mdrb.dot  mdrb_temporal.dot  melanoma.dot  melanoma_parent_temporal.dot  rcdi.dot  rcdi_parent_temporal.dot  virus.dot  virus_parent_temporal.dot
Scripts/: existing.txt  export_graph_json.cpp  export_graph_json.h  mgegroupscript.py  mgeidscript.py  output.txt  write_graph_json_main.cpp
config/: paths.json
data/: copy.csv  patientwise_colocalization_by_timepoint.csv
include/: Timepoint.h  analysis.h  config_loader.h  export.h  export_graph_json.h  graph.h  graph_analysis.h  graph_utils.h  id_maps.h  parser.h  query_engine.h  traversal.h
output/: MDRB_colocalizations.csv  rCDI_colocalizations.csv
output/Disease/: Melanoma_colocalizations.csv
output/MGE_Group/: Colicin_plasmid.csv  UNCLASSIFIED.csv  gene:plasmid:30991.csv  geneplasmid151429.csv  geneplasmid77695.csv
output/temporal_dynamics/: disappear.csv  emerge.csv  persist.csv  transfer.csv
src/: analysis.cpp  config_loader.cpp  export.cpp  export_graph_json.cpp  graph.cpp  graph_analysis.cpp  graph_constructor.cpp  graph_utils.cpp  id_maps.cpp  main  main.cpp  parser.cpp  query_engine.cpp  traversal.cpp
viz/: analysis.html  contact.html  downloads.html  graph.js  graph.json  graph1.json  graph2.json  index.html  melanoma.json  style.css  tool.html  tool_ggMob.html
viz/json/: graph.js  (+3 more)
(+20 files in other folders)
