cmake_minimum_required(VERSION 3.10)
project(CoNet CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Include dirs
include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/external)

# Single executable (no other main files!)
add_executable(CoNet
    src/main.cpp
    src/graph.cpp
    src/export_graph_json.cpp
    # add other non-main sources here:
    src/parser.cpp
    src/id_maps.cpp
    src/traversal.cpp
    src/query_engine.cpp
    src/export.cpp
    src/graph_utils.cpp
    src/graph_analysis.cpp
)

# Optional warnings
if (MSVC)
  target_compile_options(CoNet PRIVATE /W4)
else()
  target_compile_options(CoNet PRIVATE -Wall -Wextra -Wpedantic)
endif()

